# neopop-sdl

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  bugs-core.html  config.status  configure  configure.ac  neopoprc  pandora_compile.sh  readme-core.txt
Core/: neopop.h
System_SDL/: Makefile  Makefile.am  Makefile.in  NeoPop-SDL.6  NeoPop-SDL.h  NeoPop-SDL.man  NeoPop-SDL.mdoc  config.h  config.h.in  mknames.sh  neopoprc.5  neopoprc.mdoc  stamp-h1  system_bindings.c  system_graphics.c  system_input.c  system_main.c  system_rc.c  system_rom.c  system_sound.c
System_SDL/.deps/: TLCS900h_disassemble.Po  TLCS900h_disassemble_dst.Po  TLCS900h_disassemble_extra.Po  TLCS900h_disassemble_reg.Po  TLCS900h_disassemble_src.Po  TLCS900h_interpret.Po  TLCS900h_interpret_dst.Po  TLCS900h_interpret_reg.Po  TLCS900h_interpret_single.Po  TLCS900h_interpret_src.Po  TLCS900h_registers.Po  Z80.Po  Z80_interface.Po  bios.Po  biosHLE.Po  dasm.Po  dma.Po  flash.Po  gfx.Po  gfx_scanline_colour.Po  gfx_scanline_mono.Po  interrupt.Po  mem.Po  neopop.Po  rom.Po  sound.Po  state.Po  system_bindings.Po  system_comms.Po  system_graphics.Po  system_hq2x.Po  system_hq3x.Po  system_input.Po  system_io.Po  system_language.Po  system_main.Po  system_names.Po  system_osd.Po  system_rc.Po  system_rom.Po  (+3 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
release/: PXML.xml
